<?xml version="1.0"?>
<package>
  <name>jsk_annotation</name>
  <version>0.0.0</version>
  <description>The jsk_annotation package</description>

  <maintainer email="furushchev@todo.todo">furushchev</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>jsk_pcl_ros</build_depend>
  <build_depend>jsk_perception</build_depend>
  <build_depend>mongodb_store</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <run_depend>jsk_pcl_ros</run_depend>
  <run_depend>jsk_perception</run_depend>
  <run_depend>mongodb_store</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>message_runtime</run_depend>

  <export>
  </export>
</package>
