<?xml version="1.0"?>
<package>
  <name>jsk_db</name>
  <version>0.0.0</version>
  <description>The jsk_db package</description>

  <maintainer email="furushchev@jsk.imi.i.u-tokyo.ac.jp">Yuki Furuta</maintainer>

  <license>BSD</license>

  <author email="furushchev@jsk.imi.i.u-tokyo.ac.jp">Yuki Furuta</author>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
    <metapackage />
  </export>
</package>
