<?xml version="1.0"?>
<package>
  <name>jsk_db_msgs</name>
  <version>0.0.0</version>
  <description>The jsk_db_msgs package</description>
  <maintainer email="furushchev@jsk.imi.i.u-tokyo.ac.jp">Yuki Furuta</maintainer>
  <license>BSD</license>
  <author email="furushchev@jsk.imi.i.u-tokyo.ac.jp">Yuki Furuta</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>message_runtime</run_depend>

  <export>
  </export>
</package>
